--- a/Views/SipTblControlAsistencias/Create.cshtml
+++ b/Views/SipTblControlAsistencias/Create.cshtml
@@ -4,42 +4,42 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crear</h1>
 
-<h4>SipTblControlAsistencia</h4>
+<h4>ControlAsistencia</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SipTblCasId" class="control-label"></label>
+                <label asp-for="SipTblCasId" class="control-label">Código de control de asistencia</label>
                 <input asp-for="SipTblCasId" class="form-control" />
                 <span asp-validation-for="SipTblCasId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblEmpId" class="control-label"></label>
+                <label asp-for="SipTblEmpId" class="control-label">ID Empleado</label>
                 <select asp-for="SipTblEmpId" class ="form-control" asp-items="ViewBag.SipTblEmpId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblCasFechaHoraEntrada" class="control-label"></label>
+                <label asp-for="SipTblCasFechaHoraEntrada" class="control-label">Fecha Hora de Entrada</label>
                 <input asp-for="SipTblCasFechaHoraEntrada" class="form-control" />
                 <span asp-validation-for="SipTblCasFechaHoraEntrada" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblCasFechaHoraSalida" class="control-label"></label>
+                <label asp-for="SipTblCasFechaHoraSalida" class="control-label">Fecha Hora de Salida</label>
                 <input asp-for="SipTblCasFechaHoraSalida" class="form-control" />
                 <span asp-validation-for="SipTblCasFechaHoraSalida" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear Asistencia" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresear a la lista</a>
 </div>
 
 @section Scripts {
