--- a/Views/SipTblControlAsistencias/Delete.cshtml
+++ b/Views/SipTblControlAsistencias/Delete.cshtml
@@ -4,27 +4,27 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Esta seguro que desea eliminar la asistencia?</h3>
 <div>
-    <h4>SipTblControlAsistencia</h4>
+    <h4>Control Asistencia</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblCasFechaHoraEntrada)
+        <dt class="col-sm-2">
+            Fecha y Hora Entrada
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblCasFechaHoraEntrada)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblCasFechaHoraSalida)
+        <dt class="col-sm-2">
+            Fecha y Hora Salida
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblCasFechaHoraSalida)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblEmp)
+        <dt class="col-sm-2">
+            ID Empleado
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblEmp.SipTblEmpId)
@@ -34,6 +34,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="SipTblCasId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Regresear a la lista</a>
     </form>
 </div>
