--- a/Views/SipTblControlAsistencias/Edit.cshtml
+++ b/Views/SipTblControlAsistencias/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
-<h4>SipTblControlAsistencia</h4>
+<h4>Control de Asistencia</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,17 +14,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="SipTblCasId" />
             <div class="form-group">
-                <label asp-for="SipTblEmpId" class="control-label"></label>
+                <label asp-for="SipTblEmpId" class="control-label">ID Empleado</label>
                 <select asp-for="SipTblEmpId" class="form-control" asp-items="ViewBag.SipTblEmpId"></select>
                 <span asp-validation-for="SipTblEmpId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblCasFechaHoraEntrada" class="control-label"></label>
+                <label asp-for="SipTblCasFechaHoraEntrada" class="control-label">Fecha Hora de Entrada</label>
                 <input asp-for="SipTblCasFechaHoraEntrada" class="form-control" />
                 <span asp-validation-for="SipTblCasFechaHoraEntrada" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblCasFechaHoraSalida" class="control-label"></label>
+                <label asp-for="SipTblCasFechaHoraSalida" class="control-label">Fecha Hora de Salida</label>
                 <input asp-for="SipTblCasFechaHoraSalida" class="form-control" />
                 <span asp-validation-for="SipTblCasFechaHoraSalida" class="text-danger"></span>
             </div>
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresear a la lista</a>
 </div>
 
 @section Scripts {
