agregados labels a la vista de planillas

--- a/Views/SipTblDetallePlanillas/Index.cshtml
+++ b/Views/SipTblDetallePlanillas/Index.cshtml
@@ -4,37 +4,37 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Listado de planilla</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear Nuevo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.SipTblDedDeducciones)
+                Deducciones
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SipTblDplBonificacion)
+                Bonificacion
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SipTblDplIgss)
+                IGSS
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SipTblDplIrtra)
+                Irtra
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SipTblDplIsr)
+                ISR
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SipTblDplOtros)
+                Otros
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SipTblEpl)
+                ID Empleado
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SipTblTre)
+                ID Trabajo realizado
             </th>
             <th></th>
         </tr>
