--- a/Views/SipTblDetallePlanillas/Create.cshtml
+++ b/Views/SipTblDetallePlanillas/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crear</h1>
 
-<h4>SipTblDetallePlanilla</h4>
+<h4>Detalle Planilla</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,7 +18,7 @@
                 <span asp-validation-for="SipTblDplId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblEplId" class="control-label"></label>
+                <label asp-for="SipTblEplId" class="control-label">Id de empleado</label>
                 <select asp-for="SipTblEplId" class ="form-control" asp-items="ViewBag.SipTblEplId"></select>
             </div>
             <div class="form-group">
