agregados labels a la sección de contro de asistencias y corregidos algunos errores en la sección de planillas

--- a/Views/SipTblControlAsistencias/Delete.cshtml
+++ b/Views/SipTblControlAsistencias/Delete.cshtml
@@ -34,6 +34,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="SipTblCasId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Regresear a la lista</a>
+        <a asp-action="Index">Regresar a la lista</a>
     </form>
 </div>
