--- a/Views/SipTblControlAsistencias/Details.cshtml
+++ b/Views/SipTblControlAsistencias/Details.cshtml
@@ -32,5 +32,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.SipTblCasId">Editar</a> |
-    <a asp-action="Index">Regresear a la lista</a>
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
