--- a/Views/SipTblDetallePlanillas/Index.cshtml
+++ b/Views/SipTblDetallePlanillas/Index.cshtml
@@ -67,9 +67,9 @@
                 @Html.DisplayFor(modelItem => item.SipTblTre.SipTblTreId)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.SipTblDplId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.SipTblDplId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.SipTblDplId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.SipTblDplId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.SipTblDplId">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.SipTblDplId">Eliminar</a>
             </td>
         </tr>
 }
