--- a/Views/SipTblControlAsistencias/Create.cshtml
+++ b/Views/SipTblControlAsistencias/Create.cshtml
@@ -39,7 +39,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Regresear a la lista</a>
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
