--- a/Views/SipTblControlAsistencias/Edit.cshtml
+++ b/Views/SipTblControlAsistencias/Edit.cshtml
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Regresear a la lista</a>
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
