--- a/Views/SipTblDetallePlanillas/Create.cshtml
+++ b/Views/SipTblDetallePlanillas/Create.cshtml
@@ -13,57 +13,57 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SipTblDplId" class="control-label"></label>
+                <label asp-for="SipTblDplId" class="control-label">ID Detalle de Planilla</label>
                 <input asp-for="SipTblDplId" class="form-control" />
                 <span asp-validation-for="SipTblDplId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblEplId" class="control-label">Id de empleado</label>
+                <label asp-for="SipTblEplId" class="control-label">ID de empleado</label>
                 <select asp-for="SipTblEplId" class ="form-control" asp-items="ViewBag.SipTblEplId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblTreId" class="control-label"></label>
+                <label asp-for="SipTblTreId" class="control-label">ID de trabajo realizado</label>
                 <select asp-for="SipTblTreId" class ="form-control" asp-items="ViewBag.SipTblTreId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblDedDeducciones" class="control-label"></label>
+                <label asp-for="SipTblDedDeducciones" class="control-label">Deducciones</label>
                 <input asp-for="SipTblDedDeducciones" class="form-control" />
                 <span asp-validation-for="SipTblDedDeducciones" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblDplBonificacion" class="control-label"></label>
+                <label asp-for="SipTblDplBonificacion" class="control-label">Bonificación</label>
                 <input asp-for="SipTblDplBonificacion" class="form-control" />
                 <span asp-validation-for="SipTblDplBonificacion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblDplIgss" class="control-label"></label>
+                <label asp-for="SipTblDplIgss" class="control-label">IGSS</label>
                 <input asp-for="SipTblDplIgss" class="form-control" />
                 <span asp-validation-for="SipTblDplIgss" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblDplIrtra" class="control-label"></label>
+                <label asp-for="SipTblDplIrtra" class="control-label">IRTRA</label>
                 <input asp-for="SipTblDplIrtra" class="form-control" />
                 <span asp-validation-for="SipTblDplIrtra" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblDplIsr" class="control-label"></label>
+                <label asp-for="SipTblDplIsr" class="control-label">ISR</label>
                 <input asp-for="SipTblDplIsr" class="form-control" />
                 <span asp-validation-for="SipTblDplIsr" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblDplOtros" class="control-label"></label>
+                <label asp-for="SipTblDplOtros" class="control-label">Otros</label>
                 <input asp-for="SipTblDplOtros" class="form-control" />
                 <span asp-validation-for="SipTblDplOtros" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
