--- a/Views/SipTblDetallePlanillas/Delete.cshtml
+++ b/Views/SipTblDetallePlanillas/Delete.cshtml
@@ -4,66 +4,66 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Esta seguro que desea eliminar la asistencia?</h3>
 <div>
     <h4>SipTblDetallePlanilla</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblDedDeducciones)
+        <dt class="col-sm-2">
+            Deducciones
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SipTblDedDeducciones)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblDplBonificacion)
+        <dt class="col-sm-2">
+            Bonificación
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SipTblDplBonificacion)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblDplIgss)
+        <dt class="col-sm-2">
+            IGSS
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SipTblDplIgss)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblDplIrtra)
+        <dt class="col-sm-2">
+            IRTRA
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SipTblDplIrtra)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblDplIsr)
+        <dt class="col-sm-2">
+            ISR
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SipTblDplIsr)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblDplOtros)
+        <dt class="col-sm-2">
+            Otros
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SipTblDplOtros)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblEpl)
+        <dt class="col-sm-2">
+            ID de empleado
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SipTblEpl.SipTblEplId)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblTre)
+        </dd>
+        <dt class="col-sm-2">
+            ID de trabajo realizado
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SipTblTre.SipTblTreId)
-        </dd class>
+        </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="SipTblDplId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Regresar a la lista</a>
     </form>
 </div>
