--- a/Views/SipTblDetallePlanillas/Details.cshtml
+++ b/Views/SipTblDetallePlanillas/Details.cshtml
@@ -4,56 +4,56 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
-    <h4>SipTblDetallePlanilla</h4>
+    <h4>Detalle de Planilla</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblDedDeducciones)
+        <dt class="col-sm-2">
+            Deducciones
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblDedDeducciones)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblDplBonificacion)
+        <dt class="col-sm-2">
+            Bonificacion
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblDplBonificacion)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblDplIgss)
+        <dt class="col-sm-2">
+            IGSS
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblDplIgss)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblDplIrtra)
+        <dt class="col-sm-2">
+            Irtra
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblDplIrtra)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblDplIsr)
+        <dt class="col-sm-2">
+            ISR
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblDplIsr)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblDplOtros)
+        <dt class="col-sm-2">
+            Otros
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblDplOtros)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblEpl)
+        <dt class="col-sm-2">
+            ID de Empleado
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblEpl.SipTblEplId)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblTre)
+        <dt class="col-sm-2">
+            ID de trabajo realizado
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblTre.SipTblTreId)
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.SipTblDplId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.SipTblDplId">Editar</a> |
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
