--- a/Views/SipTblEncabezadoPlanillas/Delete.cshtml
+++ b/Views/SipTblEncabezadoPlanillas/Delete.cshtml
@@ -11,20 +11,20 @@
     <h4>SipTblEncabezadoPlanilla</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblEplFechahora)
+        <dt class="col-sm-2">
+            Fecha y hora
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblEplFechahora)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblEplFechainicio)
+        <dt class="col-sm-2">
+            Fecha de inicio
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblEplFechainicio)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblEplFechafin)
+        <dt class="col-sm-2">
+            Fecha de fin
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblEplFechafin)
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="SipTblEplId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index">Regresar a la lista</a>
     </form>
 </div>
