--- a/Views/SipTblEncabezadoPlanillas/Details.cshtml
+++ b/Views/SipTblEncabezadoPlanillas/Details.cshtml
@@ -4,26 +4,26 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
-    <h4>SipTblEncabezadoPlanilla</h4>
+    <h4>Encabezado de Planilla</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblEplFechahora)
+        <dt class="col-sm-2">
+            Fecha y hora
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblEplFechahora)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblEplFechainicio)
+        <dt class="col-sm-2">
+            Fecha de inicio
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblEplFechainicio)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblEplFechafin)
+        <dt class="col-sm-2">
+            Fecha de fin
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SipTblEplFechafin)
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.SipTblEplId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.SipTblEplId">Editar</a> |
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
