agregados los labels a la sección de tipo de actividades

--- a/Views/SipTblEncabezadoPlanillas/Delete.cshtml
+++ b/Views/SipTblEncabezadoPlanillas/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Esta seguro que desea eliminar el encabezado de planilla?</h3>
 <div>
-    <h4>SipTblEncabezadoPlanilla</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
