--- a/Views/SipTblTipoActividads/Create.cshtml
+++ b/Views/SipTblTipoActividads/Create.cshtml
@@ -4,38 +4,38 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crear</h1>
 
-<h4>SipTblTipoActividad</h4>
+<h4>Tipo de Actividad</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SipTblActId" class="control-label"></label>
+                <label asp-for="SipTblActId" class="control-label">ID de la actividad</label>
                 <input asp-for="SipTblActId" class="form-control" />
                 <span asp-validation-for="SipTblActId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblActNombre" class="control-label"></label>
+                <label asp-for="SipTblActNombre" class="control-label">Nombre de la actividad</label>
                 <input asp-for="SipTblActNombre" class="form-control" />
                 <span asp-validation-for="SipTblActNombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblActCostoact" class="control-label"></label>
+                <label asp-for="SipTblActCostoact" class="control-label">Costo de la actividad</label>
                 <input asp-for="SipTblActCostoact" class="form-control" />
                 <span asp-validation-for="SipTblActCostoact" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
