--- a/Views/SipTblTipoActividads/Delete.cshtml
+++ b/Views/SipTblTipoActividads/Delete.cshtml
@@ -3,31 +3,27 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h1>Esta seguro que desea eliminar la actividad?</h1>
 <div>
-    <h4>SipTblTipoActividad</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblActNombre)
+        <dt class = "col-sm-4">
+            Nombre de la actividad
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-8">
             @Html.DisplayFor(model => model.SipTblActNombre)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblActCostoact)
+        <dt class = "col-sm-4">
+            Costo de la actividad
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-8">
             @Html.DisplayFor(model => model.SipTblActCostoact)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="SipTblActId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index">Regresar a la lista</a>
     </form>
 </div>
