--- a/Views/SipTblTipoActividads/Details.cshtml
+++ b/Views/SipTblTipoActividads/Details.cshtml
@@ -4,27 +4,27 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalle</h1>
 
 <div>
-    <h4>SipTblTipoActividad</h4>
+    <h4>Tipo de Actividad</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblActNombre)
+        <dt class = "col-sm-4">
+            Nombre de la actividad
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-8">
             @Html.DisplayFor(model => model.SipTblActNombre)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblActCostoact)
+        <dt class = "col-sm-4">
+            Nombre del costo de la actividad
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-8">
             @Html.DisplayFor(model => model.SipTblActCostoact)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.SipTblActId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.SipTblActId">Editar</a> |
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
