--- a/Views/SipTblTipoActividads/Edit.cshtml
+++ b/Views/SipTblTipoActividads/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
-<h4>SipTblTipoActividad</h4>
+<h4>Tipo de Actividad</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,24 +14,24 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="SipTblActId" />
             <div class="form-group">
-                <label asp-for="SipTblActNombre" class="control-label"></label>
+                <label asp-for="SipTblActNombre" class="control-label">Nombre de la actividad</label>
                 <input asp-for="SipTblActNombre" class="form-control" />
                 <span asp-validation-for="SipTblActNombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblActCostoact" class="control-label"></label>
+                <label asp-for="SipTblActCostoact" class="control-label">Costo de la actividad</label>
                 <input asp-for="SipTblActCostoact" class="form-control" />
                 <span asp-validation-for="SipTblActCostoact" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
