--- a/Views/SipTblTrabajoRealizadoes/Create.cshtml
+++ b/Views/SipTblTrabajoRealizadoes/Create.cshtml
@@ -4,46 +4,46 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crear</h1>
 
-<h4>SipTblTrabajoRealizado</h4>
+<h4>Trabajo Realizado</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SipTblTreId" class="control-label"></label>
+                <label asp-for="SipTblTreId" class="control-label">ID del trabajo realizado</label>
                 <input asp-for="SipTblTreId" class="form-control" />
                 <span asp-validation-for="SipTblTreId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblEmpId" class="control-label"></label>
+                <label asp-for="SipTblEmpId" class="control-label">ID del empleado</label>
                 <select asp-for="SipTblEmpId" class ="form-control" asp-items="ViewBag.SipTblEmpId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblActId" class="control-label"></label>
+                <label asp-for="SipTblActId" class="control-label">ID de la actividad</label>
                 <select asp-for="SipTblActId" class ="form-control" asp-items="ViewBag.SipTblActId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblTreCantidad" class="control-label"></label>
+                <label asp-for="SipTblTreCantidad" class="control-label">Cantidad de trabajo realizado</label>
                 <input asp-for="SipTblTreCantidad" class="form-control" />
                 <span asp-validation-for="SipTblTreCantidad" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblTreTotal" class="control-label"></label>
+                <label asp-for="SipTblTreTotal" class="control-label">Total de trabajo</label>
                 <input asp-for="SipTblTreTotal" class="form-control" />
                 <span asp-validation-for="SipTblTreTotal" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
