--- a/Views/SipTblTrabajoRealizadoes/Delete.cshtml
+++ b/Views/SipTblTrabajoRealizadoes/Delete.cshtml
@@ -4,42 +4,39 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Esta seguro que desea eliminar el trabajo realizado?</h3>
 <div>
-    <h4>SipTblTrabajoRealizado</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblTreCantidad)
+        <dt class="col-sm-3">
+            Cantidad de trabajo realizado
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.SipTblTreCantidad)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblTreTotal)
+        <dt class="col-sm-3">
+            Trabajo total
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.SipTblTreTotal)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblAct)
+        <dt class="col-sm-3">
+            ID de la actividad
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.SipTblAct.SipTblActId)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblEmp)
+        </dd>
+        <dt class="col-sm-3">
+            ID del empleado
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.SipTblEmp.SipTblEmpId)
-        </dd class>
+        </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="SipTblTreId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index">Regresar a la lista</a>
     </form>
 </div>
