--- a/Views/SipTblTrabajoRealizadoes/Details.cshtml
+++ b/Views/SipTblTrabajoRealizadoes/Details.cshtml
@@ -4,39 +4,39 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalle</h1>
 
 <div>
-    <h4>SipTblTrabajoRealizado</h4>
+    <h4>Trabajo Realizado</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblTreCantidad)
+        <dt class = "col-sm-3">
+            Cantidad de trabajo realizado
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.SipTblTreCantidad)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblTreTotal)
+        <dt class = "col-sm-3">
+            Trabajo total
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.SipTblTreTotal)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblAct)
+        <dt class = "col-sm-3">
+            ID de la actividad
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.SipTblAct.SipTblActId)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SipTblEmp)
+        <dt class = "col-sm-3">
+            ID del empleado
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.SipTblEmp.SipTblEmpId)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.SipTblTreId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.SipTblTreId">Editar</a> |
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
