--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <!-- Bootstrap core CSS -->
     <link href="~/startbootstrap/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+
     <!-- Custom fonts for this template -->
     <link href="~/startbootstrap/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -22,6 +23,21 @@
 </head>
 
 <body>
+
+    <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-md-8 mx-auto">
+                    <div class="site-heading">
+                        <h1>SIPADE</h1>
+                        <span class="subheading">SISTEMA DE PLANILLA A DESTAJO</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
