--- a/Views/SipTblEncabezadoPlanillas/Create.cshtml
+++ b/Views/SipTblEncabezadoPlanillas/Create.cshtml
@@ -13,7 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SipTblEplId" class="control-label">ID del empleado</label>
+                <label asp-for="SipTblEplId" class="control-label">Codigo del empleado</label>
                 <input asp-for="SipTblEplId" class="form-control" />
                 <span asp-validation-for="SipTblEplId" class="text-danger"></span>
             </div>
