--- a/Views/SipTblTipoActividads/Create.cshtml
+++ b/Views/SipTblTipoActividads/Create.cshtml
@@ -13,7 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SipTblActId" class="control-label">ID de la actividad</label>
+                <label asp-for="SipTblActId" class="control-label">Codigo de la actividad</label>
                 <input asp-for="SipTblActId" class="form-control" />
                 <span asp-validation-for="SipTblActId" class="text-danger"></span>
             </div>
