--- a/Views/SipTblControlAsistencias/Create.cshtml
+++ b/Views/SipTblControlAsistencias/Create.cshtml
@@ -19,7 +19,7 @@
                     <span asp-validation-for="SipTblCasId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="SipTblEmpId" class="control-label">ID Empleado</label>
+                    <label asp-for="SipTblEmpId" class="control-label">Codigo Empleado</label>
                     <select asp-for="SipTblEmpId" class="form-control" asp-items="ViewBag.SipTblEmpId"></select>
                 </div>
                 <div class="form-group">
