--- a/Views/SipTblTrabajoRealizadoes/Create.cshtml
+++ b/Views/SipTblTrabajoRealizadoes/Create.cshtml
@@ -13,16 +13,16 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SipTblTreId" class="control-label">ID del trabajo realizado</label>
+                <label asp-for="SipTblTreId" class="control-label">Codigo del trabajo realizado</label>
                 <input asp-for="SipTblTreId" class="form-control" />
                 <span asp-validation-for="SipTblTreId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblEmpId" class="control-label">ID del empleado</label>
+                <label asp-for="SipTblEmpId" class="control-label">Codigo del empleado</label>
                 <select asp-for="SipTblEmpId" class ="form-control" asp-items="ViewBag.SipTblEmpId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="SipTblActId" class="control-label">ID de la actividad</label>
+                <label asp-for="SipTblActId" class="control-label">Codigo de la actividad</label>
                 <select asp-for="SipTblActId" class ="form-control" asp-items="ViewBag.SipTblActId"></select>
             </div>
             <div class="form-group">
