--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,26 +7,12 @@
 
 
     <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
+        <h2 class="display-4">Integrantes</h2>
         <p>
-            Planilla es un término frecuente en América Latina. Se trata del diminutivo de plana y puede utilizarse como sinónimo de nómina (una lista de nombres de personas o cosas). Por ejemplo: “Déjame revisar la planilla para ver si aparece tu nombre”, “Me dijeron que ya fui incluido en la planilla de los inscriptos”, “Hemos elaborado una planilla con los materiales que necesitamos para reconstruir la escuela”.
-
-            Planilla
-            Otro uso de planilla está vinculado al estado de cuentas o la liquidación de gastos: “Mi secretaria está imprimiendo las planillas y pronto comenzaremos a abonar la deuda”, “Muéstrame una planilla que compruebe las cifras que me estás comentando”.
-
-            Las planillas también son formularios impresos con espacios en blanco para rellenar. Es habitual que las planillas se utilicen para hacer declaraciones ante la administración pública o para entregar peticiones. Un ejemplo de planilla es el documento que se usa para reunir firmas y elevar un pedido a una autoridad. Dicho documento comenzará con el reclamo (“Los firmantes exigimos al gobierno que instale iluminación en las calles del barrio…”) y luego presentará una tabla con espacios en blanco para completar el nombre del firmante y, por supuesto, su firma.
-
-            Es importante establecer en este sentido que el desarrollo de Internet y también la apuesta contundente por conseguir lo que es la e-Administración ha propiciado que ahora existan lo que se conocen como planillas electrónicas. Concretamente se trata de un servicio vía online que permite que cualquier persona pueda hacer sus correspondientes pagos a la Seguridad Social a través de la Red.
-
-            De esta manera, se consigue no sólo ofrecer un servicio más eficaz y eficiente al ciudadano sino que este mismo se beneficia de poder realizar todo tipo de tramitaciones con absoluta comodidad. Concretamente las puedes acometer desde el salón de su casa y a cualquier hora del día.
-
-            Una planilla de cálculo, por otra parte, es la aplicación informática que permite almacenar datos alfanuméricos y ejecutar operaciones con la información incluida en una hoja de cálculo o plantilla de cálculo.
-
-            Asimismo tampoco hay que olvidar que existe lo que se conoce como planilla de ajedrez. Como su propio nombre indica se utiliza en las partidas de este juego y consiste básicamente en un documento de papel donde se vienen a recoger un sinfín de datos de la partida en cuestión.
-
-            La fecha, el torneo de ajedrez, el nombre del jugador que tiene las piezas blancas y el que posee las negras, la apertura y defensa o el resultado en sí son algunas de las indicaciones que aparecen escritas en esa planilla. Esta a su vez se entregará, una vez concluida la partida, a la organización de la competición para que, de esta manera, se pueda controlar de la mejor manera posible las eliminaciones de los jugadores y las clasificaciones. Sólo así se podrá conseguir que todo el torneo sea perfectamente claro y cumpliendo las normas establecidas.
-
-            En México, por último, una planilla es una lista de candidatos en una elección o un billete que permite viajar en el transporte público.
+            <h3 class="display-1">Abner Alberto Miranda Barahona 5190-17-14482 rol: DBA, Desarrollador</h3>
+            <h3 class="display-1">Francisco Roberto Maza Trujillo 5190-08-730 rol: Scrum Master, Desarrollador</h3>
+            <h3 class="display-1">Carlos Yovel López Orellana 5190-11-3148 rol: Product Owner, Desarrollador</h3>
+            <h3 class="display-1">Carlos Rubén Ruíz Menéndez 5190-12-20959 rol: Desarrollador</h3>
         </p>
     </div>
 
