--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,12 +8,12 @@
 
     <div class="text-center">
         <h2 class="display-4">Integrantes</h2>
-        <p>
-            <h3 class="display-1">Abner Alberto Miranda Barahona 5190-17-14482 rol: DBA, Desarrollador</h3>
-            <h3 class="display-1">Francisco Roberto Maza Trujillo 5190-08-730 rol: Scrum Master, Desarrollador</h3>
-            <h3 class="display-1">Carlos Yovel López Orellana 5190-11-3148 rol: Product Owner, Desarrollador</h3>
-            <h3 class="display-1">Carlos Rubén Ruíz Menéndez 5190-12-20959 rol: Desarrollador</h3>
-        </p>
+        <tr>
+            <p>Abner Alberto Miranda Barahona   5190-17-14482     rol: DBA, Desarrollador</p>
+            <p>Francisco Roberto Maza Trujillo  5190-08-730       rol: Scrum Master, Desarrollador</p>
+            <p>Carlos Yovel López Orellana      5190-11-3148      rol: Product Owner, Desarrollador</p>
+            <p>Carlos Rubén Ruíz Menéndez       5190-12-20959     rol: Desarrollador</p>
+        <tr>
     </div>
 
 </body>
